--- a/css/login.css
+++ b/css/login.css
@@ -12,37 +12,62 @@ body, html {
 
 form {
     /* This form should be separated from other elements by 1em */
+    margin: 1em;
     /* There must be 1em between the content and the border of this element */
+    padding: 1em;
 }
 
 fieldset {
     -webkit-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
+
     /* There must be 1em between the content and the border of this element */
+    padding: 1em;
     /* It should have no border */
+    border: none;
     /* Its background should be white */
+    background-color: white;
 }
 
 .width-80 {
     /* The element with this class should 80% of the width and it must be centered */
+    width: 80%;
+    align-self: center;
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
+    margin: auto;
+    border: 1px solid green;
+    padding: 5px;
+
 }
 
 .form-group {
+    width: 100%;
+    margin-top: .5em;
+    marging-bottom: .5em;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
 
 .form-label {
-    /* The text of a label must be bold */
+    font-weight: bold;
+
 }
 
 .btn-block {
     /* This element should use 100% of the width */
+    width: 100%;
+    align: center;
+    /*color: white;*/
 }
 
 .btn {
+    padding: 8px;
+    color: white;
+    font-weight: bold;
+    border: 1px solid lightgrey;
+
+    /*border-color: lightgrey;*/
     /* There must be a separation of 8px between the text and the border of this element */
     /* The text color of this element should be white and bold */
     /* The border of this element should be 1px, and its color should be light grey */
@@ -50,6 +75,12 @@ fieldset {
 }
 
 .form-control {
+    position: relative;
+    margin-top: 4px;
+    margin-bottom: 4px;
+
+    /*padding: 4px;*/
+    /*margin: .5em;*/
     /* There must be 4px on top of the text and below the text of an input with this class */
     /* It should have a separation of .5em from elements on top of it and below it */
 
@@ -57,8 +88,17 @@ fieldset {
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: 100%;
+    width: calc(100% - 4px)
 }
+
+
+/*P {
+    text-align: center
+}*/
+
+/*H2 {
+    text-align: center
+}*/
 
 
 
