--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -23,30 +23,42 @@ h2, h3 {
     background: green;
     height: 1em;
     width: 2em;
+    align-items: end;
+
+
 }
 
-.border {border: 2px solid black;}
+.border {
+    border: 2px solid black;
+}
 
 .card {
+    display: flex;
     width: 400px;
     height: 800px;
     background: white;
     padding: 1em;
     margin: 0 auto;
-       enter needed declarations here
+    /* enter needed declarations here */
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 section {
     /* enter needed declarations here */
+    display: flex;
 }
 
 section:nth-of-type(1) {
     height: 3em;
     background: lightgreen;
     /* enter needed declarations here */
+    justify-content: space-between;
+    align-items: center;
 }
 section:nth-of-type(1) div:last-child {
     /* enter needed declarations here */
+    align-self: self-start;
 }
 
 .purple-box {
@@ -57,24 +69,31 @@ section:nth-of-type(1) div:last-child {
 
 .purple-box:nth-of-type(1) {
     /* enter needed declarations here */
+    flex-grow: 2;
 }
 
 .purple-box:nth-of-type(2) {
     /* enter needed declarations here */
+    flex-grow: 1;
 }
 
 .blue-box {
     width: 100%;
     background: blue;
     height: 10em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 }
 
 section:nth-of-type(3) {
     /* enter needed declarations here */
+    align-items: center;
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
+    flex-grow: 1;
 
 }
 
@@ -87,10 +106,14 @@ section:nth-of-type(3) h3 {
 }
 
 .large-brown-box {
+    display: flex;
     height: 5em;
     width: 5em;
     background: brown;
     /* enter needed declarations here */
+    flex-grow: 1;
+    justify-content: space-between;
+
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -99,17 +122,26 @@ section:nth-of-type(3) h3 {
 
 section:nth-of-type(5) {
     /* enter needed declarations here */
+    justify-content: space-evenly;
+
 }
 
 .yellow-box {
     background: yellow;
     width: 2em;
     height: 2em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: space-between;
 }
 
+
 section:nth-of-type(6) {
+    align-items: center;
     background: coral;
     height: 14em;
+    flex-wrap: wrap;
+    justify-content: space-between;
     /* enter needed declarations here */
 }
 
