--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -28,6 +28,7 @@
     }
 
     .flex-form {
+        background: white;
         z-index: 10;
         position: relative;
         border: 20px solid rgba(0, 0, 0, 0.3);
