--- a/MyExtraWork/css/gridSystemII.css
+++ b/MyExtraWork/css/gridSystemII.css
@@ -1,21 +1,276 @@
-    /*stylesheet*/
-    :root {
-        --main-bg: #E6ECF0;
-        --link-color: #3B94D9;
-        --main-link-color: #848487;
-        --light-bg: #FFF;
-        --separator-color: #DDD;
+/*stylesheet*/
+
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap');
+:root {
+    --blue: #00ABA9;
+    --red: #E6563B;
+    --orange: #EB9D3A;
+    --green: #7CB06C;
+    --light-grey: #F0F0F0;
+    --med-grey: #E6E6E6;
+}
+.light-grey {
+    background-color: var(--light-grey);
+}
+.anton-font {
+    font-family: 'Anton', sans-serif;
+    font-size: 11px;
+    margin-top: 2px;
+}
+.abel-font {
+    font-family: 'Abel', sans-serif;
+    margin-top: 2px;
+}
+.abel-font-nav-med {
+    font-family: 'Abel', sans-serif;
+    font-size: 40px;
+    margin-left: 3px;
+}
+.abel-font-nav {
+    font-family: 'Abel', sans-serif;
+    font-size: 18px;
+    margin-top: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+body {
+    background-color: #F0F0F0;
+    text-align: center;
+    margin: 0;
+}
+h1 {
+    font-size: 4em;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+}
+h2 {
+    font-size: 3em;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+}
+h3 {
+    font-size: 2.5em;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+}
+h4 {
+    font-size: 2em;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+}
+h5 {
+    font-size: 1.75em;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+}
+p {
+    font-family: 'Abel', sans-serif;
+}
+.all-caps {
+    text-transform: uppercase;
+}
+.space {
+    margin-top: 2em;
+}
+.grey-border {
+    border: .5em solid var(--med-grey);
+}
+.card-background {
+    background-color: var(--light-grey);
+}
+.small-red-circle {
+    background-color: var(--red);
+    width: 1.2em;
+    height: 1.2em;
+    margin-left: .5em;
+    border-radius: 100%;
+}
+.small-orange-circle {
+    background-color: var(--orange);
+    width: 1.2em;
+    height: 1.2em;
+    margin-left: .5em;
+    border-radius: 100%;
+}
+.small-green-circle {
+    background-color: var(--green);
+    width: 1.2em;
+    height: 1.2em;
+    margin-left: .5em;
+    border-radius: 100%;
+}
+.small-blue-circle {
+    background-color: var(--blue);
+    width: 1.2em;
+    height: 1.2em;
+    margin-left: .5em;
+    border-radius: 100%;
+}
+.circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Anton', sans-serif;
+    margin: .5em;
+    border: .5em solid white;
+    border-radius: 50%;
+    width: 9em;
+    height: 9em;
+
+    position: relative;
+    top: 10px;
+    right: 10px;
+}
+
+.logo-container {
+    margin-top: 3em;
+    position: relative;
+
+}
+header {
+    height: 5em;
+}
+.logo{
+    width: 9em;
+    height: 9em;
+}
+
+img.logo {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: -2em;
+}
+.red {
+    background-color: var(--red);
+}
+.orange {
+    background-color: var(--orange);
+}
+.blue {
+    background-color: var(--blue);
+}
+.green {
+    background-color: var(--green);
+}
+.small-circles {
+    width: 18px;
+    height: 18px;
+    align-content: center;
+}
+
+/* small devices */
+@media (min-width: 576px) {
+    .selected-work {
+        text-align: center;
     }
-    
-    * {
-        box-sizing: border-box;
+    #toplogo {
+        position: relative;
+        top: -100px;
+        right: 5px;
     }
-    
-    body, html {
-        background-color: var(--main-bg);
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: Arial, Ubuntu, sans-serif;
+
+    .header-top-space1 {
+        display: flex;
+        /*border: 5px solid black;*/
+        height: 15vh;
+        /*background-color: green;*/
+        background-color: rgb(240, 240, 240);
+    }
+
+    .header-middle-space {
+        display: flex;
+        /*border: 5px solid black;*/
+        height: 25vh;
+        /*background-color: green;*/
+        background-color: rgb(255, 255, 255);
+    }
+
+    .bottom {
+        display: flex;
+        height: 15vh;
+        background-color: rgb(240,240,240);
+    }
+
+    .flex-container1 {
+        display: flex;
+        /*background-color: cyan;*/
+
+    }
+
+    .flex-container2 {
+        display: none;
+        background-color: cyan;
+
+    }
+}
+
+
+/* medium devices */
+@media (min-width: 768px) {
+    .selected-work {
+        text-align: left;
+    }
+    .logo-container {
+        margin-top: 3em;
+        position: relative;
+    }
+    img.logo {
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        top: -2em;
+    }
+    .flex-container1 {
+        display: block;
+
+    }
+
+}
+
+
+/* large devices */
+@media (min-width: 992px) {
+}
+
+
+/* extra large devices */
+@media (min-width: 1200px) {
+
+}
+
+
+    #toplogo1 {
+        height: 0px;
+    }
+
+    #toplogo {
+    position: relative;
+    top: -100px;
+    right: 5px;
+}
+
+    .header-top-space1 {
+        display: flex;
+        /*border: 5px solid black;*/
+        height: 15vh;
+        /*background-color: green;*/
+        background-color: rgb(240, 240, 240);
+    }
+
+    .header-middle-space {
+        display: flex;
+        /*border: 5px solid black;*/
+        height: 25vh;
+        /*background-color: green;*/
+        background-color: rgb(255, 255, 255);
+    }
+
+    .bottom {
+        display: flex;
+        /*border: 5px solid black;*/
+        height: 15vh;
+        /*background-color: green;*/
+        background-color: rgb(240,240,240);
     }
