--- a/css/konami.css
+++ b/css/konami.css
@@ -1,21 +1,79 @@
-    /*stylesheet*/
-    :root {
-        --main-bg: #E6ECF0;
-        --link-color: #3B94D9;
-        --main-link-color: #848487;
-        --light-bg: #FFF;
-        --separator-color: #DDD;
+/*stylesheet*/
+/*    *{*/
+/*        box-sizing: border-box;*/
+/*    }*/
+
+/*    body, html{*/
+/*        background: #EEE5E9;*/
+/*        overflow-X: hidden;*/
+/*    }*/
+
+
+/*    h1{*/
+/*        color: #222;*/
+/*        width:300px;*/
+/*        position: absolute;*/
+/*        left:50%;*/
+/*        top: 50%;*/
+/*        padding: 0 20px;*/
+/*        transform: translate(-50%, -50%);*/
+/*        font-family: 'VT323', monospace;*/
+/*    }*/
+
+/*    .toasty{*/
+/*        position: absolute;*/
+/*        left: 110%;*/
+/*        bottom:0;*/
+/*    }*/
+
+/*    .flash{*/
+/*        animation: flash 1s linear infinite;*/
+/*    }*/
+
+/*    .animateIn{*/
+/*        animation: 2s left forwards ease;*/
+/*    }*/
+
+/*    .code{*/
+/*        text-align:center;*/
+/*        opacity:0;*/
+/*        position:absolute;*/
+/*        top:calc(50% + 40px);*/
+/*        left:50%;*/
+/*        transform: translate(-50%);*/
+/*        font-family: 'Open Sans Condensed', sans-serif;*/
+/*        font-size: 20px;*/
+/*        letter-spacing: 0.05em;*/
+/*        text-transform: uppercase;*/
+/*        border-bottom: 2px solid #333;*/
+/*        padding: 0 20px;*/
+/*        animation: fade 2.5s 7s forwards linear;*/
+/*    }*/
+
+/*    @keyframes fade{*/
+/*        0%{opacity: 0;}*/
+/*        100%{opacity:1;}*/
+/*    }*/
+
+/*    @keyframes left {*/
+/*        0% {left: 110%;}*/
+/*        50% {left: 80%;}*/
+/*        100%{left: 110%;}*/
+/*    }*/
+
+/*    @keyframes flash{*/
+/*        0%{border-right:none;}*/
+/*        100%{border-right: 0.08em solid #222;}*/
+/*    }*/
+
+
+    .main-text {
+        border: 1px solid white;
+        color: gold;
+        text-align: center;
+        text-shadow: 4px 4px 6px #222222;
     }
-    
-    * {
-        box-sizing: border-box;
-    }
-    
-    body, html {
-        background-color: var(--main-bg);
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: Arial, Ubuntu, sans-serif;
-    }
+
+    /*body {*/
+    /*    background-position: bottom;*/
+    /*}*/
