--- a/css/konami.css
+++ b/css/konami.css
@@ -1,72 +1,36 @@
-/*stylesheet*/
-/*    *{*/
-/*        box-sizing: border-box;*/
-/*    }*/
+body {
+    color: #444;
+    font: normal 16px Helvetica, Arial, sans-serif;
+    text-align: center;
+}
 
-/*    body, html{*/
-/*        background: #EEE5E9;*/
-/*        overflow-X: hidden;*/
-/*    }*/
+.code {
+    font-size: 18px;
+    font-weight: bold;
+}
 
+.code span {
+    background: #cccccc; /* Old browsers */
+    background: -moz-linear-gradient(left,  #cccccc 0%, #eeeeee 50%, #cccccc 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#cccccc), color-stop(50%,#eeeeee), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  #cccccc 0%,#eeeeee 50%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  #cccccc 0%,#eeeeee 50%,#cccccc 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  #cccccc 0%,#eeeeee 50%,#cccccc 100%); /* IE10+ */
+    background: linear-gradient(to right,  #cccccc 0%,#eeeeee 50%,#cccccc 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#cccccc',GradientType=1 ); /* IE6-9 */
 
-/*    h1{*/
-/*        color: #222;*/
-/*        width:300px;*/
-/*        position: absolute;*/
-/*        left:50%;*/
-/*        top: 50%;*/
-/*        padding: 0 20px;*/
-/*        transform: translate(-50%, -50%);*/
-/*        font-family: 'VT323', monospace;*/
-/*    }*/
-
-/*    .toasty{*/
-/*        position: absolute;*/
-/*        left: 110%;*/
-/*        bottom:0;*/
-/*    }*/
-
-/*    .flash{*/
-/*        animation: flash 1s linear infinite;*/
-/*    }*/
-
-/*    .animateIn{*/
-/*        animation: 2s left forwards ease;*/
-/*    }*/
-
-/*    .code{*/
-/*        text-align:center;*/
-/*        opacity:0;*/
-/*        position:absolute;*/
-/*        top:calc(50% + 40px);*/
-/*        left:50%;*/
-/*        transform: translate(-50%);*/
-/*        font-family: 'Open Sans Condensed', sans-serif;*/
-/*        font-size: 20px;*/
-/*        letter-spacing: 0.05em;*/
-/*        text-transform: uppercase;*/
-/*        border-bottom: 2px solid #333;*/
-/*        padding: 0 20px;*/
-/*        animation: fade 2.5s 7s forwards linear;*/
-/*    }*/
-
-/*    @keyframes fade{*/
-/*        0%{opacity: 0;}*/
-/*        100%{opacity:1;}*/
-/*    }*/
-
-/*    @keyframes left {*/
-/*        0% {left: 110%;}*/
-/*        50% {left: 80%;}*/
-/*        100%{left: 110%;}*/
-/*    }*/
-
-/*    @keyframes flash{*/
-/*        0%{border-right:none;}*/
-/*        100%{border-right: 0.08em solid #222;}*/
-/*    }*/
-
-
+    box-shadow: 1px 0 0 #efefef inset, -1px 0 0 #efefef inset;
+    border: 1px solid #bbb;
+    border-bottom: 4px solid #aaa;
+    border-radius: 3px;
+    display: inline-block;
+    height: 24px;
+    padding: 5px;
+    margin: 0 1px;
+    text-align: center;
+    text-shadow: 0 1px 0 #fff;
+    width: 24px;
+}
     .main-text {
         border: 1px solid white;
         color: gold;
