--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -1,21 +1,74 @@
-    /*stylesheet*/
-    :root {
-        --main-bg: #E6ECF0;
-        --link-color: #3B94D9;
-        --main-link-color: #848487;
-        --light-bg: #FFF;
-        --separator-color: #DDD;
+/*stylesheet*/
+background: aliceblue;
+}
+#map {
+    width: 100%;
+    height: 600px;
+}
+header {
+    min-height: 175px;
+    display: flex;
+}
+main {
+    width: 90%;
+    max-width: 2000px;
+    margin: 0 auto;
+}
+h1 {
+    margin: auto;
+    font-size: 4em;
+    font-family: "Andale Mono";
+}
+section {
+    display:flex;
+    justify-content: space-around;
+    font-size: 1.1em;
+    margin: 5px 0;
+}
+img {
+    transform: scale(1.5);
+}
+.weather-panel {
+    text-align: center;
+    background: cornsilk;
+    flex-basis: 100%;
+    border: 1px solid black;
+    font-family: Helvetica;
+}
+input, button {
+    font-size: 2em;
+    box-sizing: border-box;
+    border: none;
+    padding: .2em;
+}
+input {
+    border: 2px solid lightgrey;
+    width: calc(100% - 117.2px);
+
+}
+button {
+    background: darkblue;
+    color: white;
+    padding: calc(.2em + 2px);
+}
+input:focus, button:focus {
+    outline: none;
+}
+button:hover {
+    background-color: #0011ff;
+    cursor: pointer;
+}
+button:active {
+    box-shadow: inset 0px 0px 0px 3px black;
+}
+@media screen and (max-width: 1200px) {
+    h1 {
+        font-size: 3em;
     }
-    
-    * {
-        box-sizing: border-box;
+    section {
+        display: block;
     }
-    
-    body, html {
-        background-color: var(--main-bg);
-        height: 100%;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: Arial, Ubuntu, sans-serif;
+    .extra-info {
+        display: none;
     }
+}
